# decks

./: .gitignore  AUDIT-GNOME-GUI-SPEC.md  Cargo.toml  README.md  SPEC.md  io.github.hanthor.decks.json  justfile  meson.build  org.tunaos.decks.json
.github/workflows/: ci.yml  publish-flatpak.yml
data/: io.github.hanthor.decks.desktop  io.github.hanthor.decks.metainfo.xml  meson.build
src/: decks.in  engine.js  export.rs  fileio.py  main.py  main.rs  meson.build  window.py  window.rs
tests/gui/: test_decks.py  test_decks_shortcuts.py
