install_data(
  'io.github.hanthor.decks.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'io.github.hanthor.decks.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'icons/hicolor/scalable/apps/io.github.hanthor.decks.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)
